Fix overflow issue in safari

--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,15 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
+  position: relative;
+  height: 100%;
 }
 
+#root {
+  overflow-x: hidden;
+  position: relative;
+  height: 100%;
+}
 
 code {
   font-family: 'Montserrat', sans-serif;
